# parcel

./: package.json
native-packages/js-swc/: .gitignore  Cargo.toml  package.json
native-packages/js-swc/core/: Cargo.toml
native-packages/js-swc/core/src/: lib.rs
native-packages/js-swc/napi/: Cargo.toml
native-packages/js-swc/napi/src/: lib.rs
native-packages/js-swc/src/: native.js
native-packages/js-swc/wasm/: Cargo.toml
native-packages/js-swc/wasm/src/: lib.rs
