[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel_js_swc_napi"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { git = "https://github.com/napi-rs/napi-rs", branch = "main", features = ["serde-json"] }
napi-derive = { git = "https://github.com/napi-rs/napi-rs", branch = "main" }
parcel_js_swc_core = { path = "../core" }

[build-dependencies]
napi-build = { git = "https://github.com/napi-rs/napi-rs", branch = "main" }
